--- a/src/app/forms/template-driven/template-driven.component.html
+++ b/src/app/forms/template-driven/template-driven.component.html
@@ -1,5 +1,8 @@
 <div class="container">
 <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
+  <div>
+    <h1>Add Hero</h1>
+  </div>
   <div class="form-group">
     <label for="name">Name</label>
     <input type="text" class="form-control" id="name"
