heroes module, mock backend

--- a/src/app/forms/forms.example.component.html
+++ b/src/app/forms/forms.example.component.html
@@ -1,13 +1,13 @@
 <div class="jumbotron">
   <div class="container">
     <div class="col-sm-8 col-sm-offset-2">
-      <button class="btn btn-primary" (click)="changeComponent('template-driven')" routerLink="/template-driven">
+      <button class="btn btn-primary" (click)="changeComponent('template-driven')" routerLink="template-driven">
         template-driven form
       </button>
-      <button class="btn btn-primary" (click)="changeComponent('reactive')" routerLink="/reactive">
+      <button class="btn btn-primary" (click)="changeComponent('reactive')" routerLink="reactive">
         Reactive form
       </button>
-      <button class="btn btn-primary" (click)="changeComponent('custom')" routerLink="/custom-form">
+      <button class="btn btn-primary" (click)="changeComponent('custom')" routerLink="custom-form">
         Custom input component
       </button>
 
