menu, code clean

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
+<button class="btn btn-primary" routerLink="/forms">
+  Forms
+</button>
+<button class="btn btn-primary" routerLink="/heroes">
+  Heroes
+</button>
 <router-outlet></router-outlet>
 <toaster-container></toaster-container>
