--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,4 +1,4 @@
-<div class="constainer">
+<div class="container">
   <div class="mat-elevation-z8">
     <mat-table [dataSource]="tableDataSource">
       <ng-container matColumnDef="id">
