custom button triggered twice fix

--- a/src/app/shared/custom-button/custom-button.component.html
+++ b/src/app/shared/custom-button/custom-button.component.html
@@ -1,3 +1,3 @@
-<button (click)="onClick()" type="{{buttonType}}" class="btn btn-primary">
+<button (click)="onClick($event)" type="{{buttonType}}" class="btn btn-primary">
   <ng-content></ng-content>
 </button>
