custom input component fix

--- a/src/app/shared/custom-form/custom.input.component.html
+++ b/src/app/shared/custom-form/custom.input.component.html
@@ -1,4 +1,4 @@
 <div class="btn-group">
-  <input placeholder="{{ placeholder }}" type="text" [(ngModel)]="text" class="form-control" (input)="change($event)" #input>
+  <input placeholder="{{ placeholder }}" type="text" [(ngModel)]="text" class="form-control" (ngModelChange)="change($event)" #input>
   <span *ngIf="text && text.length > 0" (click)="clearSearch()" id="search-clear" class="glyphicon glyphicon-remove"></span>
 </div>
