--- a/src/app/forms/custom-form/custom-form.component.html
+++ b/src/app/forms/custom-form/custom-form.component.html
@@ -3,7 +3,12 @@
     <app-custom-input
       #customInput
       [placeholder]="'Custom input'"
-      formControlName="customInput"></app-custom-input>
+      formControlName="customInput">
+    </app-custom-input>
+    <div *ngIf="isFieldValid('customInput')">
+      <app-error-display *ngIf="hasError('customInput', 'required')" [errorMsg]="'Name is required!'"></app-error-display>
+      <app-error-display *ngIf="hasError('customInput', 'minlength')" [errorMsg]="'Min length is 3 character!'"></app-error-display>
+    </div>
   </div>
   <div class="form-group">
     <app-autocomplete-multi-select
@@ -13,6 +18,12 @@
       [property]="'name'"
       [selected]="selected"
       [toOrder]="true">
+
+      <!-- itt a komponens tag-je közé tesszük a hibaüzeneteket, amit a komponensben ng-content-el lehet elérni, azért, hogy az input mező alatt helyezkedjen el -->
+      <div *ngIf="isFieldValid('heroes')">
+        <app-error-display *ngIf="hasError('heroes', 'required')" [errorMsg]="'Heroes is required'"></app-error-display>
+        <app-error-display *ngIf="hasError('heroes', 'minlength')" [errorMsg]="'Choose minimum 2 heroes!'"></app-error-display>
+      </div>
     </app-autocomplete-multi-select>
   </div>
   <div class="form-group">
